# testdrop

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: lib.rs
